--- a/index.html
+++ b/index.html
@@ -6,29 +6,63 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Content-Security-Policy" content="script-src 'self';">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Sidetrack</title>
+  <title>RVM</title>
   <style>
     html,
     body {
       margin: 0;
       padding: 0;
       background-color: #000000;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      -webkit-app-region: drag;
+    }
+
+    #warning-container {
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      text-align: center;
+      font-size: 1.5rem;
     }
 
     #panel {
-      display: flex;
-      flex-direction: row;
+      align-items: center;
       height: 100vh;
+    }
+
+    .flex {
+      display: flex;
+    }
+
+    .flex-row {
+      flex-direction: row;
+    }
+
+    .flex-column {
+      flex-direction: column;
     }
 
     .stream {
       object-fit: fill;
+      height: 100vh;
+    }
+
+    .hide {
+      display: none;
+    }
+
+    .white-text {
+      color: #ffffff;
     }
   </style>
 </head>
 
 <body>
-  <div id="panel"></div>
+  <div id="warning-container" class="hide flex-column">
+    <p id="warning" class="white-text">Please connect device to an external display.</p>
+  </div>
+  <div id="panel" class="hide flex-row">
+  </div>
   <script src="./renderer.js"></script>
 </body>
 
